User - Migrate user and role to DynamoDB