@@ -3,8 +3,10 @@ package com.github.saphyra.apphub.integration.backend.admin_panel.role_managemen
 import com.github.saphyra.apphub.integration.action.backend.IndexPageActions;
 import com.github.saphyra.apphub.integration.action.backend.admin_panel.RoleManagementActions;
 import com.github.saphyra.apphub.integration.core.BackEndTest;
+import com.github.saphyra.apphub.integration.core.feature_lock.Feature;
+import com.github.saphyra.apphub.integration.core.feature_lock.FeatureLocked;
 import com.github.saphyra.apphub.integration.framework.Constants;
-import com.github.saphyra.apphub.integration.framework.DatabaseUtil;
+import com.github.saphyra.apphub.integration.framework.DynamoDbUtil;
 import com.github.saphyra.apphub.integration.structure.api.authorization.TokenResponse;
 import com.github.saphyra.apphub.integration.structure.api.user.RegistrationParameters;
 import com.github.saphyra.apphub.integration.structure.api.user.UserRoleResponse;
@@ -18,10 +20,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 public class GetUserRolesTest extends BackEndTest {
     @Test(groups = {"be", "admin-panel"})
+    @FeatureLocked(Feature.ROLE_TEST)
     public void getRoles() {
         RegistrationParameters userData = RegistrationParameters.validParameters();
         IndexPageActions.registerUser(getServerPort(), userData.toRegistrationRequest());
-        DatabaseUtil.addRoleByEmail(userData.getEmail(), Constants.ROLE_ADMIN);
+        DynamoDbUtil.addRoleByEmail(userData.getEmail(), Constants.ROLE_ADMIN);
         TokenResponse tokenResponse = IndexPageActions.login(getServerPort(), userData.toLoginRequest());
         String accessToken = tokenResponse.getAccessToken()
             .getJwt();
@@ -45,7 +48,7 @@ public class GetUserRolesTest extends BackEndTest {
         List<UserRoleResponse> successfulQueryResponse = RoleManagementActions.getRoles(getServerPort(), accessToken, userData.getEmail());
 
         assertThat(successfulQueryResponse).hasSize(1);
-        UserRoleResponse userRoleResponse = successfulQueryResponse.get(0);
+        UserRoleResponse userRoleResponse = successfulQueryResponse.getFirst();
         assertThat(userRoleResponse.getEmail()).isEqualTo(userData.getEmail());
         assertThat(userRoleResponse.getUsername()).isEqualTo(userData.getUsername());
         assertThat(userRoleResponse.getRoles()).containsExactlyInAnyOrder(
